Fix for issue where shorter screen heights would cause content to overflow document and show white space underneath.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 
 body {
     display: flex;
+    flex-flow: row wrap;
     margin: 0px;
     padding: 0px;
     font-family: 'Roboto', sans-serif;
@@ -33,14 +34,12 @@ a {
     background-size: cover;                
     background-repeat: no-repeat;
     background-position: center center;  
-    position: relative;
 }
 
 .logo-bar {
     background-color: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    position: absolute;
-    top: 60px;
+    position: relative;
+    top: 12vh;
     display: flex;
     padding: 8px 0px;
     align-items: center;
@@ -59,9 +58,9 @@ img {
 }
 
 #photo-credit {
-    position: absolute;
-    bottom: 0px;
-    right: 33%;
+    position: fixed;
+    bottom: 1vh;
+    left: 1vw;
     padding-bottom: 8px;
     font-size: 0.6rem;
 }
